[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]
readme = "README.md"
packages = [
    { include = "packages" },
    { include = "scripts" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
notebook = "^7.1.3"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
pycoingecko = "^3.1.0"
pandas = "^2.2.2"
nba-api = "^1.4.1"
lxml = "^5.2.1"
randomuser = "^1.6"
scrapy = "^2.11.2"
selenium = "^4.21.0"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
